<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/lemon_salad"
    tools:context=".SignupActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/transparent_asparagus">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/asparagus"
                android:shadowColor="@color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="40"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/textbox_asparagus"
                android:drawableStart="@drawable/baseline_person_outline_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:textColorHint="@color/asparagus"
                android:autofillHints="no"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/asparagus"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/textbox_asparagus"
                android:drawableStart="@drawable/outline_mail_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:textColorHint="@color/asparagus"
                android:autofillHints="no"
                android:padding="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/asparagus"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/textbox_asparagus"
                android:drawableStart="@drawable/outline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/asparagus"
                android:autofillHints="no"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/asparagus"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/loginButton"
                android:text="@string/signup"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/asparagus"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/redirectToLogin"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/signupText"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"

        android:layout_marginBottom="20dp"/>
</LinearLayout>